better workaround