@@ -15,24 +15,35 @@
  */
 package io.micronaut.http.netty;
 
-import com.oracle.svm.core.annotate.Delete;
+import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
+import com.oracle.svm.core.annotate.TargetElement;
 
 import java.util.function.BooleanSupplier;
 
-// Netty CleanerJava24 references these two classes, and they reference ScopedMemoryAccess, which
-// is not implemented in native image. That leads to a link error even on JVMs where MemorySegment
-// is still in preview. We need to delete these APIs entirely to make the build work, and suppress
-// the build time error with --report-unsupported-elements-at-runtime
+// Netty CleanerJava24 references the memory segment API, and when that's reachable, there's a
+// build error with native image. These substitutions fix the build and disable the cleaner.
 
-@TargetClass(className = "java.lang.foreign.MemorySegment", onlyWith = Jdk19OrLater.class)
-@Delete
-final class MemorySegmentDeletion {
+@TargetClass(className = "io.netty.util.internal.CleanerJava24")
+final class CleanerJava24 {
+    @Substitute
+    @TargetElement(name = "isSupported")
+    static boolean isSupported() {
+        return false;
+    }
 }
 
-@TargetClass(className = "java.lang.foreign.Arena", onlyWith = Jdk19OrLater.class)
-@Delete
-final class ArenaDeletion {
+@TargetClass(className = "jdk.internal.foreign.MemorySessionImpl", onlyWith = Jdk19OrLater.class)
+final class MemorySessionImpl {
+}
+
+@TargetClass(className = "jdk.internal.misc.ScopedMemoryAccess", onlyWith = Jdk19OrLater.class)
+final class ScopedMemoryAccess {
+    @Substitute
+    @TargetElement(name = "closeScope0")
+    boolean closeScope0Unsupported(MemorySessionImpl memorySessionImpl) {
+        throw new UnsupportedOperationException();
+    }
 }
 
 final class Jdk19OrLater implements BooleanSupplier {
